@@ -1,1 +1,1 @@
-recursive-include Examples/*
+recursive-include Example/*
